force-app/main/default/objects/VOC__c/fields/VoCTypeLargeCode__c.field-meta.xml
<CustomField>
    <fullName>VoCTypeLargeCode__c</fullName>
    <label>VoC Type Large</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>문의/요청</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>불만</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>클레임</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>제안/칭찬</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>