force-app/main/default/objects/VOC__c/fields/VOCTypeSmallCode__c.field-meta.xml
<CustomField>
    <fullName>VOCTypeSmallCode__c</fullName>
    <label>VOCTypeSmall</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>VOCTypeMediumCode__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>상품문의</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>영업문의</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>거래문의</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>배송문의</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>시스템문의</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>협찬문의</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>상품요청</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>영업요청</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>배송요청</label>
            </value>
            <value>
                <fullName>014</fullName>
                <label>반품요청</label>
            </value>
            <value>
                <fullName>015</fullName>
                <label>서류요청</label>
            </value>
            <value>
                <fullName>021</fullName>
                <label>주문장애</label>
            </value>
            <value>
                <fullName>022</fullName>
                <label>상품가격불만</label>
            </value>
            <value>
                <fullName>023</fullName>
                <label>발주오류</label>
            </value>
            <value>
                <fullName>031</fullName>
                <label>지연</label>
            </value>
            <value>
                <fullName>032</fullName>
                <label>적재</label>
            </value>
            <value>
                <fullName>033</fullName>
                <label>배송서비스</label>
            </value>
            <value>
                <fullName>041</fullName>
                <label>결품</label>
            </value>
            <value>
                <fullName>042</fullName>
                <label>관능</label>
            </value>
            <value>
                <fullName>043</fullName>
                <label>포장상태</label>
            </value>
            <value>
                <fullName>044</fullName>
                <label>규격</label>
            </value>
            <value>
                <fullName>045</fullName>
                <label>타상품입고</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>기타</label>
            </value>
            <value>
                <fullName>051</fullName>
                <label>불친절</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>1급 유통기한</label>
            </value>
            <value>
                <fullName>061</fullName>
                <label>1급 이물</label>
            </value>
            <value>
                <fullName>071</fullName>
                <label>2급이물</label>
            </value>
            <value>
                <fullName>072</fullName>
                <label>유통기한</label>
            </value>
            <value>
                <fullName>073</fullName>
                <label>원산지</label>
            </value>
            <value>
                <fullName>081</fullName>
                <label>3급클레임</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>