force-app/main/default/objects/VOC__c/fields/VOCTypeSubdivisionCode__c.field-meta.xml
<CustomField>
    <fullName>VOCTypeSubdivisionCode__c</fullName>
    <label>VOCTypeSubdivisionCode</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>VOCTypeSmallCode__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>상품 공급</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>상품 가격</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>상품 이미지</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>상품 규격</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>보관방법</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>표시사항</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>사용방법</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>주문상품 내역</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>연락처</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>입금계좌/입금</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>여신문의</label>
            </value>
            <value>
                <fullName>021</fullName>
                <label>미거래 고객 식자재 공급</label>
            </value>
            <value>
                <fullName>022</fullName>
                <label>미거래 고객 위탁급식</label>
            </value>
            <value>
                <fullName>023</fullName>
                <label>미거래 협력사 납품</label>
            </value>
            <value>
                <fullName>024</fullName>
                <label>폐기물 처리</label>
            </value>
            <value>
                <fullName>031</fullName>
                <label>퀵문의</label>
            </value>
            <value>
                <fullName>032</fullName>
                <label>배송도착</label>
            </value>
            <value>
                <fullName>035</fullName>
                <label>자사시스템</label>
            </value>
            <value>
                <fullName>036</fullName>
                <label>타사시스템</label>
            </value>
            <value>
                <fullName>038</fullName>
                <label>식자재 협찬</label>
            </value>
            <value>
                <fullName>041</fullName>
                <label>신규상품 등록</label>
            </value>
            <value>
                <fullName>045</fullName>
                <label>고객처 정보변경</label>
            </value>
            <value>
                <fullName>050</fullName>
                <label>배송시간 조정</label>
            </value>
            <value>
                <fullName>051</fullName>
                <label>적재장소 변경</label>
            </value>
            <value>
                <fullName>052</fullName>
                <label>당일 긴급주문 퀵요청</label>
            </value>
            <value>
                <fullName>279</fullName>
                <label>배송기사 위생/복장불량</label>
            </value>
            <value>
                <fullName>062</fullName>
                <label>고객처 판매부진</label>
            </value>
            <value>
                <fullName>063</fullName>
                <label>고객처 거래중단</label>
            </value>
            <value>
                <fullName>064</fullName>
                <label>고객처 메뉴중단</label>
            </value>
            <value>
                <fullName>060</fullName>
                <label>체인본사요청</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>