force-app/main/default/objects/VOC__c/fields/VOCUnit__c.field-meta.xml
<CustomField>
    <fullName>VOCUnit__c</fullName>
    <label>VOCUnit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>