force-app/main/default/objects/VOC__c/recordTypes/Etc.recordType-meta.xml
<RecordType>
    <fullName>Etc</fullName>
    <active>true</active>
    <label>080,6114,홈페이지</label>
</RecordType>