force-app/main/default/objects/VOC__c/recordTypes/OwnCustomer.recordType-meta.xml
<RecordType>
    <fullName>OwnCustomer</fullName>
    <active>true</active>
    <label>자사고객</label>
</RecordType>