force-app/main/default/objects/VOC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MAName__c</columns>
    <columns>VOCOriginCode__c</columns>
    <columns>RequesterName__c</columns>
    <columns>RegisterName__c</columns>
    <columns>RegDate__c</columns>
    <columns>UpdaterName__c</columns>
    <columns>UpdDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>모든 VoC</label>
</ListView>