force-app/main/default/objects/VOC__c/listViews/TodayVOC.listView-meta.xml
<ListView>
    <fullName>TodayVOC</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>IssueType__c</columns>
    <columns>TeamBranch__c</columns>
    <columns>ManagementAddress__c</columns>
    <columns>MA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CallTypeCode__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PriorityCode__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>VOCOriginCode__c</field>
        <operation>equals</operation>
        <value>10</value>
    </filters>
    <label>금일 내 고객사의 VOC</label>
</ListView>